Fixed title screen spacing and button.

--- a/walker.css
+++ b/walker.css
@@ -29,6 +29,6 @@ button {
   display: block;
 }
 
-#maineTitle {
+#mainTitle {
   text-align: center;
 }
